# sprt-signal-engine

./: .gitignore  CMakeLists.txt  README.md
include/sse/: engine_config.h  ingest.h  types.h
src/: ingest.cpp  log.cpp  normalize.cpp  signal_engine.cpp
src/algos/: algo.h  xsp.cpp  xsp.h
src/internal/: log.h  normalize.h  signal_engine.h  types.h
test/: main.cpp
